# agb

./: .buildinfo  .gitignore  CMakeLists.txt  Dominik_1989A&A...223..227D  README.md  configuration.html  genindex.html  glossary.html  index.html  installation.html  objects.inv  overview.html  references.html  running.html  search.html  searchindex.js
.github/workflows/: gh-pages.yml
IRC10216/: config.toml  model.config  output.config
IRC10216_gridtest/: flux_terminal.txt  model.config  output.config  plot_temp.m
_sources/: configuration.rst.txt  glossary.rst.txt  references.rst.txt  running.rst.txt
_sources/theory/: chemistry.rst.txt  hydrodynamics.rst.txt  index.rst.txt  opacities.rst.txt  temperature_correction.rst.txt
doc_src/: Makefile  conf.py  index.rst  installation.rst  overview.rst
doc_src/implementation/: architecture.rst  io_formats.rst  modules.rst
doc_src/theory/: dust.rst  governing_equations.rst  numerics.rst  radiative_transfer.rst
implementation/: architecture.html  io_formats.html  modules.html
src/additional/: aux_functions.cpp  aux_functions.h  exceptions.h  interpolation.h  movable_grid.h  physical_const.h  quadrature.h  solve_linear_system.h  tri_diagonal_matrix.h
src/agb_model/: agb_model.cpp  agb_model.h  anderson_step.cpp  movable_grid.cpp
src/atmosphere/: atmosphere.cpp  atmosphere.h  atmosphere_read_write.cpp
src/chemistry/: chem_species.h  fastchem_chemistry.cpp  fastchem_chemistry.h
src/config/: config.cpp  config.h
src/dust/: analytic_dust.cpp  analytic_dust.h  dust_species.cpp  dust_species.h  gail_sedlmayr_dust.cpp  gail_sedlmayr_dust.h  gail_sedlmayr_thermo_functions.cpp
src/hydrodynamics/: henyey_solver.cpp  hydrodynamics.cpp  hydrodynamics.h  structure_solver.cpp  structure_solver.h
src/model_main/: model_main.cpp
src/radiative_transfer/: impact_parameter.cpp  linearisation.cpp  moment_system.cpp  output.cpp  radiation_field.cpp  radiative_transfer.cpp  radiative_transfer.h
src/spectral_grid/: convert.cpp  spectral_grid.cpp  spectral_grid.h  spectral_grid_interpolate.cpp
src/temperature_correction/: temperature_correction.cpp  temperature_correction.h  temperature_correction_linearisation.cpp
src/transport_coefficients/: cross_section_file.cpp  h2_m.cpp  h_m.cpp  opacity_species.cpp  opacity_species.h  sampled_data.cpp  sampled_data.h  species_definition.h  species_rayleigh_cross_sections.cpp  transport_coeff.cpp  transport_coeff.h
theory/: chemistry.html  dust.html  governing_equations.html  hydrodynamics.html  index.html  numerics.html  opacities.html  radiative_transfer.html  temperature_correction.html
